--- a/GameManager/Makefile
+++ b/GameManager/Makefile
@@ -1,47 +1,83 @@
-CXX        ?= g++
-CXXFLAGS   ?= -std=c++20 -O2 -fPIC -Wall -Wextra -Wpedantic -MMD -MP
+# ===== GameManager/.so build =====
 
-ROOT_DIR        ?= ..
-USER_COMMON_DIR ?= $(ROOT_DIR)/UserCommon
-INCLUDES        := -Iinclude -I$(ROOT_DIR)
-ifneq ($(wildcard $(USER_COMMON_DIR)),)
-  INCLUDES      += -I$(USER_COMMON_DIR)
-endif
+CXX       := c++
+CXXFLAGS  := -std=c++20 -O2 -Wall -Wextra -Wpedantic -MMD -MP -fPIC \
+             -Iinclude -I../UserCommon
+LDFLAGS   :=
+LDLIBS    :=
 
-IDS        ?= 212497127_324916402
-
-BUILD_DIR  := build
-OBJ_DIR    := $(BUILD_DIR)/obj
-
+# --- Platform: build a .so on both macOS and Linux ---
 UNAME_S := $(shell uname -s)
 ifeq ($(UNAME_S),Darwin)
-  SHARED_EXT := dylib
-  LDFLAGS   += -dynamiclib -undefined dynamic_lookup
+    SO_EXT          := so
+    SHARED_LDFLAGS  := -dynamiclib -undefined dynamic_lookup
 else
-  SHARED_EXT := so
-  LDFLAGS   += -shared
+    SO_EXT          := so
+    SHARED_LDFLAGS  := -shared
 endif
 
-LIB_NAME   := GameManager_$(IDS).$(SHARED_EXT)
+# --- Output name (edit the suffix if you like) ---
+ID_SUFFIX ?= 212497127_324916402
+TARGET    := GameManager_$(ID_SUFFIX).$(SO_EXT)
 
-SRCS := $(shell find src -name '*.cpp')
-OBJS := $(patsubst src/%.cpp,$(OBJ_DIR)/%.o,$(SRCS))
-DEPS := $(OBJS:.o=.d)
+# --- Sources ---
+SRC := \
+  $(wildcard src/*.cpp) \
+  $(wildcard src/*/*.cpp)
 
-.PHONY: all clean
-all: $(LIB_NAME)
+# Exclude any standalone runner
+SRC := $(filter-out src/main.cpp,$(SRC))
 
-$(LIB_NAME): $(OBJS)
+# Pull in UserCommon impl if present
+ifneq ($(wildcard ../UserCommon/DirectionUtils.cpp),)
+  SRC += ../UserCommon/DirectionUtils.cpp
+endif
+
+# --- Objects / deps ---
+OBJDIR := build/obj
+OBJS   := $(SRC:%.cpp=$(OBJDIR)/%.o)
+DEPS   := $(OBJS:.o=.d)
+
+# --- Default ---
+.PHONY: all
+all: $(TARGET)
+
+# --- Link shared library (.so) ---
+$(TARGET): $(OBJS)
 	@echo "  [LD]  $@"
-	$(CXX) $(LDFLAGS) -o $@ $(OBJS)
+	$(CXX) $(SHARED_LDFLAGS) -o $@ $^ $(LDFLAGS) $(LDLIBS)
 
-$(OBJ_DIR)/%.o: src/%.cpp
+# --- Compile rule ---
+$(OBJDIR)/%.o: %.cpp
 	@mkdir -p $(dir $@)
 	@echo "  [C++] $<"
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+# --- Optional: local test runner that uses src/main.cpp ---
+# Builds a small binary linking the same objects + main.cpp (not needed for the .so)
+TEST_BIN := gm_test
+.PHONY: test
+test: $(TEST_BIN)
+$(TEST_BIN): $(filter-out $(OBJDIR)/src/main.o,$(OBJS)) $(OBJDIR)/src/main.o
+	@echo "  [LD]  $@"
+	$(CXX) -o $@ $^ $(LDFLAGS) $(LDLIBS)
+
+# Ensure main.o exists for test target only
+$(OBJDIR)/src/main.o: src/main.cpp
+	@mkdir -p $(dir $@)
+	@echo "  [C++] $<"
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+# --- Utils ---
+.PHONY: clean print
 clean:
 	@echo "  [CLEAN]"
-	@rm -rf $(BUILD_DIR) $(LIB_NAME)
+	@rm -rf $(OBJDIR) $(TARGET) $(TEST_BIN) *.dSYM
 
+print:
+	@echo "TARGET = $(TARGET)"
+	@echo "SRC    = $(SRC)"
+	@echo "OBJS   = $(OBJS)"
+
+# --- Auto deps ---
 -include $(DEPS)
