finalized simulator logic

--- a/Algorithm/Makefile
+++ b/Algorithm/Makefile
@@ -1,59 +1,76 @@
-# ===== Algorithm/.so build =====
+# ================= Tanks Game 3.0 — Algorithm Plugin Makefile =================
+# Place this file in Algorithm/
 
-CXX       := c++
-CXXFLAGS  := -std=c++20 -O2 -Wall -Wextra -Wpedantic -MMD -MP -fPIC \
-             -Iinclude -I../UserCommon
-LDFLAGS   :=
-LDLIBS    :=
+# ---- Toolchain / Platform ----
+CXX      ?= c++
+UNAME_S  := $(shell uname -s)
 
-# Force .so as requested (works on Linux; on macOS this still produces a .so with -shared)
-SO_EXT    := so
-SHARED_LDFLAGS := -shared
+# ---- Paths (adjust if your tree differs) ----
+ROOT_DIR        := ..
+SIM_DIR         := $(ROOT_DIR)/Simulator
+COMMON_DIR      := $(ROOT_DIR)/common
+USERCOMMON_DIR  := $(ROOT_DIR)/UserCommon
+ALG_DIR         := $(ROOT_DIR)/Algorithm
 
-# -------- Output name (change the suffix to whatever you like) --------
-ID_SUFFIX ?= 212497127_324916402
-TARGET    := Algorithm_$(ID_SUFFIX).$(SO_EXT)
+# Output: where the simulator expects plugin .dylib/.so files
+OUT_DIR         := $(ROOT_DIR)/tests/Algorithms
 
-# -------- Sources --------
-SRC := \
-  $(wildcard src/*.cpp) \
-  $(wildcard src/Roles/*.cpp)
+# Build folders for objects
+BUILD_DIR       := $(ALG_DIR)/build
+OBJ_DIR         := $(BUILD_DIR)/obj
 
-# Add UserCommon implementation if present
-ifneq ($(wildcard ../UserCommon/DirectionUtils.cpp),)
-  SRC += ../UserCommon/DirectionUtils.cpp
+# ---- Include search paths ----
+INC_DIRS := $(SIM_DIR)/include $(ROOT_DIR) $(COMMON_DIR) $(USERCOMMON_DIR) $(ALG_DIR)/include
+CXXFLAGS ?= -std=c++20 -O2 -Wall -Wextra -Wpedantic -fPIC
+CXXFLAGS += $(addprefix -I,$(INC_DIRS))
+
+# ---- Platform-specific linker flags for plugins ----
+# macOS: allow undefined symbols to resolve from the host executable at runtime
+ifeq ($(UNAME_S),Darwin)
+  PLUGIN_LDFLAGS := -shared -Wl,-undefined,dynamic_lookup
+  LDLIBS         :=
+else ifeq ($(UNAME_S),Linux)
+  PLUGIN_LDFLAGS := -shared -fPIC
+  LDLIBS         :=            # (no special libs needed for the plugin itself)
+else
+  PLUGIN_LDFLAGS := -shared
+  LDLIBS         :=
 endif
 
-# -------- Objects / deps --------
-OBJDIR := build/obj
-OBJS   := $(SRC:%.cpp=$(OBJDIR)/%.o)
-DEPS   := $(OBJS:.o=.d)
+# ---- Sources ----
+# Add your algorithm .cpp files here (recursively collects from Algorithm/src)
+ALG_SRCS := $(shell find $(ALG_DIR)/src -name '*.cpp')
 
-# -------- Default --------
-.PHONY: all
-all: $(TARGET)
+# ---- Objects (mirror folder structure under build/obj) ----
+ALG_OBJS := $(patsubst $(ALG_DIR)/%.cpp,$(OBJ_DIR)/$(ALG_DIR)/%.o,$(ALG_SRCS))
 
-# -------- Link shared library (.so) --------
-$(TARGET): $(OBJS)
-	@echo "  [LD]  $@"
-	$(CXX) $(SHARED_LDFLAGS) -o $@ $^ $(LDFLAGS) $(LDLIBS)
+# ---- Targets ----
+# Build two copies with the required IDs (matches your simulator’s expected filenames)
+ALG_IDS := 212788293_212497127 212788293_212497128
+ALG_BINS := $(addprefix $(OUT_DIR)/Algorithm_,$(addsuffix .dylib,$(ALG_IDS)))
 
-# -------- Compile --------
-$(OBJDIR)/%.o: %.cpp
+.PHONY: all clean veryclean print
+
+all: $(ALG_BINS)
+
+# Link rule (same object set, different output names)
+$(OUT_DIR)/Algorithm_%.dylib: $(ALG_OBJS)
 	@mkdir -p $(dir $@)
-	@echo "  [C++] $<"
+	$(CXX) $(ALG_OBJS) $(PLUGIN_LDFLAGS) $(LDLIBS) -o $@
+
+# Compile rule: keep original tree under build/obj
+$(OBJ_DIR)/$(ALG_DIR)/%.o: $(ALG_DIR)/%.cpp
+	@mkdir -p $(@D)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-# -------- Utilities --------
-.PHONY: clean print
-clean:
-	@echo "  [CLEAN]"
-	@rm -rf $(OBJDIR) $(TARGET) *.dSYM
-
 print:
-	@echo "TARGET   = $(TARGET)"
-	@echo "SRC      = $(SRC)"
-	@echo "OBJS     = $(OBJS)"
+	@echo "UNAME_S     = $(UNAME_S)"
+	@echo "OUT_DIR     = $(OUT_DIR)"
+	@echo "INC_DIRS    = $(INC_DIRS)"
+	@echo "ALG_SRCS:"; printf "  %s\n" $(ALG_SRCS)
 
-# -------- Auto deps --------
--include $(DEPS)
+clean:
+	@rm -rf $(BUILD_DIR)
+
+veryclean: clean
+	@rm -f $(ALG_BINS)
